Fix stepper layout on iOS

--- a/src/Stepper.css
+++ b/src/Stepper.css
@@ -1,31 +1,33 @@
 .Stepper {
+  border-radius: 4px;
+  border: 1px solid var(--gray-4);
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px;
+  overflow: hidden;
 }
 
 .Stepper__Button {
+  flex-shrink: 0;
   fill: var(--gray-1);
+  border-radius: 0;
   line-height: 0;
   background-color: var(--white);
-  padding: 7px;
-  border: 1px solid var(--gray-4);
+  padding: 9px;
 }
 
 .Stepper__Button:first-child {
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 0;
+  border-right: 1px solid var(--gray-4);
 }
 
 .Stepper__Button:last-child {
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
+  border-left: 1px solid var(--gray-4);
 }
 
 .Stepper__Input {
-  border: 1px solid var(--gray-4);
-  border-left: none;
-  border-right: none;
+  border: none;
   font-size: 14px;
-  padding: 7px;
   width: 48px;
   text-align: center;
 }
